--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,10 +6,21 @@
     .heroButtons {
         @apply px-6 py-2 border border-transparent rounded-full uppercase text-sm tracking-widest text-gray-500 transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40 
     }
+
+    .contactInput {
+        @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 transition-all focus:border-[#F7AB0A]/40  focus:text-[#F7AB0A]/40 hover:border-[#F7AB0A]/40
+    }
 }
 
-::-webkit-scrollbar{
-    height: 4px;
-    width: 4px;
-    background: rgb(36,36,36);
+::-webkit-scrollbar {
+  width: 6px;               
+}
+::-webkit-scrollbar-track {
+  background: rgb(36, 36, 36);      
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(36, 36, 36);    
+  border-radius: 20px;      
+  border: 1px solid #525252;  
 }
